# codespaces-cmake

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  myprofile
.devcontainer/: devcontainer.json
cmake/: clang-18.cmake
src/: add.cpp  basic_ops.cpp  greet.c  lib.cpp
src/stats/: mod.cpp  one_var.cpp
